--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = "projects/memoreel"
 
 [[redirects]]
   from = "/*"
   to = "/"
   status = 200
 
+[[redirects]]
+  from = "projects/memoreel/*"
+  to = "projects/memoreel/index.html"
+  status = 200
